<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <ImageView
               android:id="@+id/imageView"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="-1dp"
               android:layout_marginTop="-1dp"
               android:adjustViewBounds="true"
               android:scaleType="centerCrop"
               android:src="@drawable/bk_img"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <ImageView
               android:id="@+id/imageView2"
               android:layout_width="wrap_content"
               android:layout_height="0dp"
               android:layout_marginHorizontal="32dp"
               android:adjustViewBounds="true"
               android:src="@drawable/logo"
               app:layout_constraintBottom_toTopOf="@id/textView"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHeight_percent="0.07"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.7"
               app:layout_constraintVertical_chainStyle="packed" />

           <TextView
               android:id="@+id/textView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="32dp"
               android:fontFamily="@font/myriad_semibold"
               android:text="@string/bee_on_time"
               android:textColor="@color/white"
               android:textSize="56dp"
               android:textStyle="bold"
               app:layout_constraintBottom_toTopOf="@+id/linearLayout"
               app:layout_constraintEnd_toStartOf="@id/tv2"
               app:layout_constraintHorizontal_chainStyle="packed"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/imageView2"
               tools:ignore="SpUsage" />


           <TextView
               android:id="@+id/tv2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginBottom="8dp"
               android:fontFamily="@font/myriad_semibold"
               android:text="@string/_2_0"
               android:textColor="@color/white"
               android:textSize="24dp"
               android:textStyle="bold"
               app:layout_constraintBottom_toBottomOf="@+id/textView"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toEndOf="@+id/textView"
               tools:ignore="SpUsage" />

           <LinearLayout
               android:id="@+id/linearLayout"
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:background="@drawable/top_rounded_view"
               android:orientation="vertical"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHeight_percent="0.6"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="1">

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/usernameTextInputLayout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="24dp"
                   android:layout_marginTop="48dp"
                   app:boxBackgroundColor="#D6DBED"
                   app:boxCornerRadiusBottomEnd="12dp"
                   app:boxCornerRadiusBottomStart="12dp"
                   app:boxCornerRadiusTopEnd="12dp"
                   app:boxCornerRadiusTopStart="12dp"
                   app:boxStrokeColor="#5A6684"
                   app:boxStrokeWidth="0dp"
                   app:endIconMode="dropdown_menu"
                   app:hintTextColor="#5A6684">

                   <com.google.android.material.textfield.MaterialAutoCompleteTextView
                       android:id="@+id/emailAutoCompleteTV"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/myriad"
                       android:gravity="center_vertical"
                       android:hint="@string/username"
                       android:maxLines="1"
                       android:paddingStart="16dp"
                       android:paddingTop="18dp"
                       android:paddingBottom="18dp"
                       android:inputType="textEmailAddress"
                       android:textColorHint="#5A6684"
                       tools:ignore="RtlSymmetry" />


               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/passwordTextInputLayout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="24dp"
                   android:layout_marginTop="20dp"
                   app:boxBackgroundColor="#D6DBED"
                   app:boxCornerRadiusBottomEnd="12dp"
                   app:boxCornerRadiusBottomStart="12dp"
                   app:boxCornerRadiusTopEnd="12dp"
                   app:boxCornerRadiusTopStart="12dp"
                   app:boxStrokeColor="#5A6684"
                   app:boxStrokeWidth="0dp"
                   app:endIconDrawable="@drawable/password"
                   app:endIconMode="custom"
                   app:hintTextColor="#5A6684">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/passwordEditText"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/myriad"
                       android:hint="@string/password"
                       android:inputType="textPassword"
                       android:maxLines="1"
                       android:textColorHint="#5A6684" />

               </com.google.android.material.textfield.TextInputLayout>


               <com.google.android.material.button.MaterialButton
                   android:id="@+id/btnLogin"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="24dp"
                   android:layout_marginTop="20dp"
                   android:backgroundTint="#336633"
                   android:fontFamily="@font/myriad_semibold"
                   android:letterSpacing="0.08"
                   android:paddingVertical="15dp"
                   android:text="@string/login"
                   android:textAllCaps="true"
                   android:textSize="18sp"
                   app:cornerRadius="12dp" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="28dp"
                   android:fontFamily="@font/myriad"
                   android:text="@string/forgot_password"
                   android:textColor="#5A6684"
                   android:textSize="16sp" />

               <TextView
                   android:id="@+id/btnContactHr"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="4dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"
                   android:fontFamily="@font/myriad"
                   android:text="@string/contact_the_hr"
                   android:textColor="#20242B"
                   android:textSize="16sp" />

           </LinearLayout>


           <FrameLayout
               android:id="@+id/unSafeArea"
               android:layout_width="0dp"
               android:layout_height="30dp"
               android:background="#336633"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent" />
       </androidx.constraintlayout.widget.ConstraintLayout>
       <include layout="@layout/loading"/>
   </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>